fix nav-tabs alignment

--- a/wfiles/css/extras/wacss.css
+++ b/wfiles/css/extras/wacss.css
@@ -1251,6 +1251,7 @@ textarea[data-behavior="whiteboard"]{
 ul.nav-tabs{
   display: -ms-flexbox;
   display: flex;
+  align-items:end;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   padding: 0;
